--- a/source/index.html
+++ b/source/index.html
@@ -5,11 +5,21 @@
     <link href='./styles.css' rel='stylesheet'>
     <script src='site.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <title>Mongo2018</title>
+    <title>Mongo: Disaster Relief</title>
 </head>
 <body>
-<h1>
-    Damn gurl
-</h1>
+    <div id = "header">
+        <h1>
+            Damn.
+        </h1>
+        <div id = "donate-now-button">
+
+        </div>
+    </div>
+    <div id = "mission-statement">
+        <h4>Our Mission Statement</h4>
+        <p>We ...</p>
+    </div>
+
 </body>
 </html>
