--- a/source/index.html
+++ b/source/index.html
@@ -17,8 +17,22 @@
         </div>
     </div>
     <div id = "mission-statement">
-        <h4>Our Mission Statement</h4>
-        <p>We ...</p>
+        <h2>Our Mission Statement</h2>
+        <p>We aim to...</p>
+    </div>
+    <div id = "supply-buttons" style="overflow: hidden; display: flex; justify-content:space-around;">
+        <div id = "food-box" class = "box">
+            <h2>FOOD</h2>
+        </div>
+        <div id = "water-box" class = "box">
+            <h2>WATER</h2>
+        </div>
+        <div id = "medical-box" class = "box">
+            <h2>MEDICAL</h2>
+        </div>
+        <div id = "clothing-box" class = "box">
+            <h2>CLOTHING</h2>
+        </div>
     </div>
 
 </body>
