--- a/source/index.html
+++ b/source/index.html
@@ -10,29 +10,29 @@
 <body>
     <div id = "header">
         <h1>
-            Damn.
+            Mongo
         </h1>
-        <div id = "donate-now-button">
-
-        </div>
+        <button id = "donate-now-button">
+            Donate Now
+        </button>
     </div>
     <div id = "mission-statement">
         <h2>Our Mission Statement</h2>
         <p>We aim to...</p>
     </div>
     <div id = "supply-buttons" style="overflow: hidden; display: flex; justify-content:space-around;">
-        <div id = "food-box" class = "box">
+        <button id = "food-box" class = "box">
             <h2>FOOD</h2>
-        </div>
-        <div id = "water-box" class = "box">
+        </button>
+        <button id = "water-box" class = "box">
             <h2>WATER</h2>
-        </div>
-        <div id = "medical-box" class = "box">
+        </button>
+        <button id = "medical-box" class = "box">
             <h2>MEDICAL</h2>
-        </div>
-        <div id = "clothing-box" class = "box">
+        </button>
+        <button id = "clothing-box" class = "box">
             <h2>CLOTHING</h2>
-        </div>
+        </button>
     </div>
 
 </body>
