linked map to main page

--- a/source/index.html
+++ b/source/index.html
@@ -36,9 +36,11 @@
         <h1>
             Hurricane Michael
         </h1>
-        <button id = "donate-now-button">
-            Donate Now
-        </button>
+        <form action="donatenow.html">
+            <button id = "donate-now-button">
+                Donate Now
+            </button>
+        </form>
     </div>
 
     <div id = "mission-statement">
