--- a/source/map.html
+++ b/source/map.html
@@ -202,7 +202,7 @@ for(var i = 0; i < layers.length; i++){
     key.className = 'legend-key';
     key.style.backgroundColor = color;
     var value = document.createElement('span');
-    value.style.fontSize = 'xx-large';
+    value.style.fontSize = 'large';
     value.innerHTML = layer;
     item.appendChild(key);
     item.appendChild(value);
