--- a/source/donatenow.html
+++ b/source/donatenow.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  <head>
-    <title>Hurricane Michael Donation Page</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-      <!-- <meta charset="UTF"> -->
-      <style>
-</style>
-  </head>
-  <body>
-    <form>
-    </div>
-      <form action="donation.html">
-        <button class="signup">Donate With Paypal</button>
-      </form>
-      <form action="map.html">
-        <button href="map.html" class="login">Map of Disaster Relief/Urgency</button>
-      </form>
-    </form>
-    </div>
-  </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <link href='./styles.css' rel='stylesheet'>
+    <script src='site.js'></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <title>Donate Now</title>
+</head>
 
+<body>
+
+    <script type="text/javascript"></script>
+    <div id="header">
+        <form action="donation.html">
+            <button id="donate-paypal-button">
+                Donate With Paypal
+            <button/>
+        </form>
+        <form action="map.html">
+            <button id="donate-paypal-button">
+                Map of Disaster Relief/Urgency
+            <button/>
+        </form>
+    </div>
+
+
+</body>
 </html>
+
+
