--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
     <div id = "nav-bar">
         <a href="#" class = "logo">Mongo</a>
         <div id="nav-right">
-            <a href="learning.html">Login</a>
+            <a href="learning.html">Login/Sign Up</a>
         </div>
     </div>
 
