--- a/source/learning.html
+++ b/source/learning.html
@@ -23,8 +23,10 @@
       <br>
       <br>
       <button class="signup"> Sign Up</button>
-      <button class="login"> Log In</button>
-    </form>
+      </form>
+      <form action="loginNonProfit.html">
+        <button class="login"> Log In</button>
+      </form>
     </div>
   </div>
   <img class="image" src="hand3.jpg" />
