--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
 
     <div id = "mission-statement">
         <h2>Our Mission</h2>
-        <p>"An Online Community Where Nonprofits, Companies and Individuals work together to turn everyday products into life-changing goods." -- Good360</p>
+        <p>"We aim to...</p>
     </div>
 
     <!--<div id = stats>-->
