--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
 
     <div id = "mission-statement">
         <h2>Our Mission</h2>
-        <p>"We aim to...</p>
+        <p>We aim to...</p>
     </div>
 
     <!--<div id = stats>-->
