--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
 
     <div id = "mission-statement">
         <h2>Our Mission</h2>
-        <p>We aim to...</p>
+        <p>We want to change the way people operate in disaster relief efforts, so that everyone's contributions are maximally effective in benefitting displaced populations.</p>
     </div>
 
     <!--<div id = stats>-->
